RHEL9 setup script [no ci]